fix overflow

--- a/src/app/components/layers-cut/layers-cut.component.scss
+++ b/src/app/components/layers-cut/layers-cut.component.scss
@@ -32,6 +32,12 @@
     line-height: 17px;
     padding-top: 5.5px;
     padding-bottom: 5px;
+
+    overflow: hidden;
+    text-overflow: ellipsis;
+
+    white-space: nowrap;
+    width: 112px;
 }
 
 .size {
